cors-anywhere-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cors-anywhere
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cors-anywhere
  type: ClusterIP
